// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TodoListItem /> when rendering with the todo being completed should render correctly 1`] = `
<WithStyles(TodoListItem)
  asyncCallsInProgress={true}
  classes={
    Object {
      "completedTodoItem": "completedTodoItem",
    }
  }
  onCheckClicked={[MockFunction]}
  todo={
    Object {
      "completed": true,
      "dueDate": 2000-02-01T05:00:00.000Z,
      "id": "bc995789-f666-4f15-8fa4-739d3182a808",
    }
  }
>
  <TodoListItem
    asyncCallsInProgress={true}
    classes={
      Object {
        "completedTodoItem": "TodoListItem-completedTodoItem-2 completedTodoItem",
        "todoItem": "TodoListItem-todoItem-1",
      }
    }
    onCheckClicked={[MockFunction]}
    todo={
      Object {
        "completed": true,
        "dueDate": 2000-02-01T05:00:00.000Z,
        "id": "bc995789-f666-4f15-8fa4-739d3182a808",
      }
    }
  >
    <WithStyles(ListItem)
      className="TodoListItem-completedTodoItem-2 completedTodoItem"
    >
      <ListItem
        ContainerComponent="li"
        button={false}
        className="TodoListItem-completedTodoItem-2 completedTodoItem"
        classes={
          Object {
            "button": "MuiListItem-button-11",
            "container": "MuiListItem-container-4",
            "default": "MuiListItem-default-6",
            "dense": "MuiListItem-dense-7",
            "disabled": "MuiListItem-disabled-8",
            "divider": "MuiListItem-divider-9",
            "focusVisible": "MuiListItem-focusVisible-5",
            "gutters": "MuiListItem-gutters-10",
            "root": "MuiListItem-root-3",
            "secondaryAction": "MuiListItem-secondaryAction-12",
            "selected": "MuiListItem-selected-13",
          }
        }
        dense={false}
        disableGutters={false}
        disabled={false}
        divider={false}
        selected={false}
      >
        <li
          className="MuiListItem-root-3 MuiListItem-default-6 MuiListItem-gutters-10 TodoListItem-completedTodoItem-2 completedTodoItem"
          disabled={false}
        >
          <WithStyles(Checkbox)
            checked={true}
            disableRipple={true}
            disabled={true}
            key=".0"
            onChange={[MockFunction]}
            tabIndex={-1}
          >
            <Checkbox
              checked={true}
              checkedIcon={<pure(CheckBox) />}
              classes={
                Object {
                  "checked": "MuiCheckbox-checked-15",
                  "colorPrimary": "MuiCheckbox-colorPrimary-18",
                  "colorSecondary": "MuiCheckbox-colorSecondary-19",
                  "disabled": "MuiCheckbox-disabled-16",
                  "indeterminate": "MuiCheckbox-indeterminate-17",
                  "root": "MuiCheckbox-root-14",
                }
              }
              color="secondary"
              disableRipple={true}
              disabled={true}
              icon={<pure(CheckBoxOutlineBlank) />}
              indeterminate={false}
              indeterminateIcon={<pure(IndeterminateCheckBox) />}
              onChange={[MockFunction]}
              tabIndex={-1}
            >
              <WithStyles(SwitchBase)
                checked={true}
                checkedIcon={<pure(CheckBox) />}
                className=""
                classes={
                  Object {
                    "checked": "MuiCheckbox-checked-15",
                    "disabled": "MuiCheckbox-disabled-16",
                    "root": "MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19",
                  }
                }
                disableRipple={true}
                disabled={true}
                icon={<pure(CheckBoxOutlineBlank) />}
                inputProps={
                  Object {
                    "data-indeterminate": false,
                  }
                }
                onChange={[MockFunction]}
                tabIndex={-1}
                type="checkbox"
              >
                <SwitchBase
                  checked={true}
                  checkedIcon={<pure(CheckBox) />}
                  className=""
                  classes={
                    Object {
                      "checked": "MuiPrivateSwitchBase-checked-21 MuiCheckbox-checked-15",
                      "disabled": "MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16",
                      "input": "MuiPrivateSwitchBase-input-23",
                      "root": "MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19",
                    }
                  }
                  disableRipple={true}
                  disabled={true}
                  icon={<pure(CheckBoxOutlineBlank) />}
                  inputProps={
                    Object {
                      "data-indeterminate": false,
                    }
                  }
                  onChange={[MockFunction]}
                  tabIndex={-1}
                  type="checkbox"
                >
                  <WithStyles(IconButton)
                    className="MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19 MuiPrivateSwitchBase-checked-21 MuiCheckbox-checked-15 MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16"
                    component="span"
                    disableRipple={true}
                    disabled={true}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    tabIndex={null}
                  >
                    <IconButton
                      className="MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19 MuiPrivateSwitchBase-checked-21 MuiCheckbox-checked-15 MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16"
                      classes={
                        Object {
                          "colorInherit": "MuiIconButton-colorInherit-25",
                          "colorPrimary": "MuiIconButton-colorPrimary-26",
                          "colorSecondary": "MuiIconButton-colorSecondary-27",
                          "disabled": "MuiIconButton-disabled-28",
                          "label": "MuiIconButton-label-29",
                          "root": "MuiIconButton-root-24",
                        }
                      }
                      color="default"
                      component="span"
                      disableRipple={true}
                      disabled={true}
                      onBlur={[Function]}
                      onFocus={[Function]}
                      tabIndex={null}
                    >
                      <WithStyles(ButtonBase)
                        centerRipple={true}
                        className="MuiIconButton-root-24 MuiIconButton-disabled-28 MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19 MuiPrivateSwitchBase-checked-21 MuiCheckbox-checked-15 MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16"
                        component="span"
                        disableRipple={true}
                        disabled={true}
                        focusRipple={true}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        tabIndex={null}
                      >
                        <ButtonBase
                          centerRipple={true}
                          className="MuiIconButton-root-24 MuiIconButton-disabled-28 MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19 MuiPrivateSwitchBase-checked-21 MuiCheckbox-checked-15 MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16"
                          classes={
                            Object {
                              "disabled": "MuiButtonBase-disabled-31",
                              "focusVisible": "MuiButtonBase-focusVisible-32",
                              "root": "MuiButtonBase-root-30",
                            }
                          }
                          component="span"
                          disableRipple={true}
                          disableTouchRipple={false}
                          disabled={true}
                          focusRipple={true}
                          onBlur={[Function]}
                          onFocus={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          <span
                            className="MuiButtonBase-root-30 MuiButtonBase-disabled-31 MuiIconButton-root-24 MuiIconButton-disabled-28 MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19 MuiPrivateSwitchBase-checked-21 MuiCheckbox-checked-15 MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16"
                            onBlur={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="-1"
                          >
                            <span
                              className="MuiIconButton-label-29"
                            >
                              <pure(CheckBox)>
                                <CheckBox>
                                  <WithStyles(SvgIcon)>
                                    <SvgIcon
                                      classes={
                                        Object {
                                          "colorAction": "MuiSvgIcon-colorAction-36",
                                          "colorDisabled": "MuiSvgIcon-colorDisabled-38",
                                          "colorError": "MuiSvgIcon-colorError-37",
                                          "colorPrimary": "MuiSvgIcon-colorPrimary-34",
                                          "colorSecondary": "MuiSvgIcon-colorSecondary-35",
                                          "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-39",
                                          "fontSizeLarge": "MuiSvgIcon-fontSizeLarge-41",
                                          "fontSizeSmall": "MuiSvgIcon-fontSizeSmall-40",
                                          "root": "MuiSvgIcon-root-33",
                                        }
                                      }
                                      color="inherit"
                                      component="svg"
                                      fontSize="default"
                                      viewBox="0 0 24 24"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="MuiSvgIcon-root-33"
                                        focusable="false"
                                        role="presentation"
                                        viewBox="0 0 24 24"
                                      >
                                        <path
                                          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                                        />
                                      </svg>
                                    </SvgIcon>
                                  </WithStyles(SvgIcon)>
                                </CheckBox>
                              </pure(CheckBox)>
                              <input
                                checked={true}
                                className="MuiPrivateSwitchBase-input-23"
                                data-indeterminate={false}
                                disabled={true}
                                onChange={[Function]}
                                tabIndex={-1}
                                type="checkbox"
                              />
                            </span>
                          </span>
                        </ButtonBase>
                      </WithStyles(ButtonBase)>
                    </IconButton>
                  </WithStyles(IconButton)>
                </SwitchBase>
              </WithStyles(SwitchBase)>
            </Checkbox>
          </WithStyles(Checkbox)>
          <Link
            href={
              Object {
                "pathname": "/todo",
                "query": Object {
                  "id": "bc995789-f666-4f15-8fa4-739d3182a808",
                },
              }
            }
            key=".1"
            prefetch={true}
          >
            <a
              href="/todo?id=bc995789-f666-4f15-8fa4-739d3182a808"
              onClick={[Function]}
            >
              <WithStyles(ListItemText)
                secondary="Due: 02/01/2000"
              >
                <ListItemText
                  classes={
                    Object {
                      "dense": "MuiListItemText-dense-44",
                      "inset": "MuiListItemText-inset-43",
                      "primary": "MuiListItemText-primary-45",
                      "root": "MuiListItemText-root-42",
                      "secondary": "MuiListItemText-secondary-46",
                      "textDense": "MuiListItemText-textDense-47",
                    }
                  }
                  disableTypography={false}
                  inset={false}
                  secondary="Due: 02/01/2000"
                >
                  <div
                    className="MuiListItemText-root-42"
                  >
                    <WithStyles(Typography)
                      className="MuiListItemText-secondary-46"
                      color="textSecondary"
                    >
                      <Typography
                        align="inherit"
                        className="MuiListItemText-secondary-46"
                        classes={
                          Object {
                            "alignCenter": "MuiTypography-alignCenter-71",
                            "alignJustify": "MuiTypography-alignJustify-73",
                            "alignLeft": "MuiTypography-alignLeft-70",
                            "alignRight": "MuiTypography-alignRight-72",
                            "body1": "MuiTypography-body1-57",
                            "body2": "MuiTypography-body2-56",
                            "button": "MuiTypography-button-59",
                            "caption": "MuiTypography-caption-58",
                            "colorError": "MuiTypography-colorError-82",
                            "colorInherit": "MuiTypography-colorInherit-77",
                            "colorPrimary": "MuiTypography-colorPrimary-78",
                            "colorSecondary": "MuiTypography-colorSecondary-79",
                            "colorTextPrimary": "MuiTypography-colorTextPrimary-80",
                            "colorTextSecondary": "MuiTypography-colorTextSecondary-81",
                            "display1": "MuiTypography-display1-52",
                            "display2": "MuiTypography-display2-51",
                            "display3": "MuiTypography-display3-50",
                            "display4": "MuiTypography-display4-49",
                            "gutterBottom": "MuiTypography-gutterBottom-75",
                            "h1": "MuiTypography-h1-60",
                            "h2": "MuiTypography-h2-61",
                            "h3": "MuiTypography-h3-62",
                            "h4": "MuiTypography-h4-63",
                            "h5": "MuiTypography-h5-64",
                            "h6": "MuiTypography-h6-65",
                            "headline": "MuiTypography-headline-53",
                            "noWrap": "MuiTypography-noWrap-74",
                            "overline": "MuiTypography-overline-68",
                            "paragraph": "MuiTypography-paragraph-76",
                            "root": "MuiTypography-root-48",
                            "srOnly": "MuiTypography-srOnly-69",
                            "subheading": "MuiTypography-subheading-55",
                            "subtitle1": "MuiTypography-subtitle1-66",
                            "subtitle2": "MuiTypography-subtitle2-67",
                            "title": "MuiTypography-title-54",
                          }
                        }
                        color="textSecondary"
                        gutterBottom={false}
                        headlineMapping={
                          Object {
                            "body1": "p",
                            "body2": "p",
                            "display1": "h1",
                            "display2": "h1",
                            "display3": "h1",
                            "display4": "h1",
                            "h1": "h1",
                            "h2": "h2",
                            "h3": "h3",
                            "h4": "h4",
                            "h5": "h5",
                            "h6": "h6",
                            "headline": "h1",
                            "subheading": "h3",
                            "subtitle1": "h6",
                            "subtitle2": "h6",
                            "title": "h2",
                          }
                        }
                        noWrap={false}
                        paragraph={false}
                        theme={
                          Object {
                            "breakpoints": Object {
                              "between": [Function],
                              "down": [Function],
                              "keys": Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ],
                              "only": [Function],
                              "up": [Function],
                              "values": Object {
                                "lg": 1280,
                                "md": 960,
                                "sm": 600,
                                "xl": 1920,
                                "xs": 0,
                              },
                              "width": [Function],
                            },
                            "direction": "ltr",
                            "mixins": Object {
                              "gutters": [Function],
                              "toolbar": Object {
                                "@media (min-width:0px) and (orientation: landscape)": Object {
                                  "minHeight": 48,
                                },
                                "@media (min-width:600px)": Object {
                                  "minHeight": 64,
                                },
                                "minHeight": 56,
                              },
                            },
                            "overrides": Object {},
                            "palette": Object {
                              "action": Object {
                                "active": "rgba(0, 0, 0, 0.54)",
                                "disabled": "rgba(0, 0, 0, 0.26)",
                                "disabledBackground": "rgba(0, 0, 0, 0.12)",
                                "hover": "rgba(0, 0, 0, 0.08)",
                                "hoverOpacity": 0.08,
                                "selected": "rgba(0, 0, 0, 0.14)",
                              },
                              "augmentColor": [Function],
                              "background": Object {
                                "default": "#fafafa",
                                "paper": "#fff",
                              },
                              "common": Object {
                                "black": "#000",
                                "white": "#fff",
                              },
                              "contrastThreshold": 3,
                              "divider": "rgba(0, 0, 0, 0.12)",
                              "error": Object {
                                "contrastText": "#fff",
                                "dark": "#d32f2f",
                                "light": "#e57373",
                                "main": "#f44336",
                              },
                              "getContrastText": [Function],
                              "grey": Object {
                                "100": "#f5f5f5",
                                "200": "#eeeeee",
                                "300": "#e0e0e0",
                                "400": "#bdbdbd",
                                "50": "#fafafa",
                                "500": "#9e9e9e",
                                "600": "#757575",
                                "700": "#616161",
                                "800": "#424242",
                                "900": "#212121",
                                "A100": "#d5d5d5",
                                "A200": "#aaaaaa",
                                "A400": "#303030",
                                "A700": "#616161",
                              },
                              "primary": Object {
                                "contrastText": "#fff",
                                "dark": "#303f9f",
                                "light": "#7986cb",
                                "main": "#3f51b5",
                              },
                              "secondary": Object {
                                "contrastText": "#fff",
                                "dark": "#c51162",
                                "light": "#ff4081",
                                "main": "#f50057",
                              },
                              "text": Object {
                                "disabled": "rgba(0, 0, 0, 0.38)",
                                "hint": "rgba(0, 0, 0, 0.38)",
                                "primary": "rgba(0, 0, 0, 0.87)",
                                "secondary": "rgba(0, 0, 0, 0.54)",
                              },
                              "tonalOffset": 0.2,
                              "type": "light",
                            },
                            "props": Object {},
                            "shadows": Array [
                              "none",
                              "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
                              "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
                              "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
                              "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
                              "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
                              "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
                              "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
                              "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
                              "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
                              "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
                              "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
                              "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
                              "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
                              "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
                              "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
                              "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
                              "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
                              "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
                              "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
                              "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
                              "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
                              "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
                              "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
                              "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
                            ],
                            "shape": Object {
                              "borderRadius": 4,
                            },
                            "spacing": Object {
                              "unit": 8,
                            },
                            "transitions": Object {
                              "create": [Function],
                              "duration": Object {
                                "complex": 375,
                                "enteringScreen": 225,
                                "leavingScreen": 195,
                                "short": 250,
                                "shorter": 200,
                                "shortest": 150,
                                "standard": 300,
                              },
                              "easing": Object {
                                "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                                "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                                "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                                "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                              },
                              "getAutoHeightDuration": [Function],
                            },
                            "typography": Object {
                              "body1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 400,
                                "lineHeight": "1.46429em",
                              },
                              "body1Next": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00938em",
                                "lineHeight": 1.5,
                              },
                              "body2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "lineHeight": "1.71429em",
                              },
                              "body2Next": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.01071em",
                                "lineHeight": 1.5,
                              },
                              "button": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "textTransform": "uppercase",
                              },
                              "buttonNext": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.02857em",
                                "lineHeight": 1.5,
                                "textTransform": "uppercase",
                              },
                              "caption": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "lineHeight": "1.375em",
                              },
                              "captionNext": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.03333em",
                                "lineHeight": 1.66,
                              },
                              "display1": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.125rem",
                                "fontWeight": 400,
                                "lineHeight": "1.20588em",
                              },
                              "display2": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.8125rem",
                                "fontWeight": 400,
                                "lineHeight": "1.13333em",
                                "marginLeft": "-.02em",
                              },
                              "display3": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3.5rem",
                                "fontWeight": 400,
                                "letterSpacing": "-.02em",
                                "lineHeight": "1.30357em",
                                "marginLeft": "-.02em",
                              },
                              "display4": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "7rem",
                                "fontWeight": 300,
                                "letterSpacing": "-.04em",
                                "lineHeight": "1.14286em",
                                "marginLeft": "-.04em",
                              },
                              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                              "fontSize": 14,
                              "fontWeightLight": 300,
                              "fontWeightMedium": 500,
                              "fontWeightRegular": 400,
                              "h1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "6rem",
                                "fontWeight": 300,
                                "letterSpacing": "-0.01562em",
                                "lineHeight": 1,
                              },
                              "h2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3.75rem",
                                "fontWeight": 300,
                                "letterSpacing": "-0.00833em",
                                "lineHeight": 1,
                              },
                              "h3": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3rem",
                                "fontWeight": 400,
                                "letterSpacing": "0em",
                                "lineHeight": 1.04,
                              },
                              "h4": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.125rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00735em",
                                "lineHeight": 1.17,
                              },
                              "h5": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.5rem",
                                "fontWeight": 400,
                                "letterSpacing": "0em",
                                "lineHeight": 1.33,
                              },
                              "h6": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.25rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.0075em",
                                "lineHeight": 1.6,
                              },
                              "headline": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.5rem",
                                "fontWeight": 400,
                                "lineHeight": "1.35417em",
                              },
                              "overline": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.08333em",
                                "lineHeight": 2.66,
                                "textTransform": "uppercase",
                              },
                              "pxToRem": [Function],
                              "round": [Function],
                              "subheading": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "lineHeight": "1.5em",
                              },
                              "subtitle1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00938em",
                                "lineHeight": 1.75,
                              },
                              "subtitle2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.00714em",
                                "lineHeight": 1.57,
                              },
                              "title": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.3125rem",
                                "fontWeight": 500,
                                "lineHeight": "1.16667em",
                              },
                              "useNextVariants": false,
                            },
                            "zIndex": Object {
                              "appBar": 1100,
                              "drawer": 1200,
                              "mobileStepper": 1000,
                              "modal": 1300,
                              "snackbar": 1400,
                              "tooltip": 1500,
                            },
                          }
                        }
                      >
                        <p
                          className="MuiTypography-root-48 MuiTypography-body1-57 MuiTypography-colorTextSecondary-81 MuiListItemText-secondary-46"
                        >
                          Due: 02/01/2000
                        </p>
                      </Typography>
                    </WithStyles(Typography)>
                  </div>
                </ListItemText>
              </WithStyles(ListItemText)>
            </a>
          </Link>
        </li>
      </ListItem>
    </WithStyles(ListItem)>
  </TodoListItem>
</WithStyles(TodoListItem)>
`;

exports[`<TodoListItem /> when rendering with the todo not being completed should render correctly 1`] = `
<WithStyles(TodoListItem)
  asyncCallsInProgress={true}
  classes={Object {}}
  onCheckClicked={[MockFunction]}
  todo={
    Object {
      "completed": false,
      "dueDate": 2000-02-01T05:00:00.000Z,
      "id": "bc995789-f666-4f15-8fa4-739d3182a808",
    }
  }
>
  <TodoListItem
    asyncCallsInProgress={true}
    classes={
      Object {
        "completedTodoItem": "TodoListItem-completedTodoItem-2",
        "todoItem": "TodoListItem-todoItem-1",
      }
    }
    onCheckClicked={[MockFunction]}
    todo={
      Object {
        "completed": false,
        "dueDate": 2000-02-01T05:00:00.000Z,
        "id": "bc995789-f666-4f15-8fa4-739d3182a808",
      }
    }
  >
    <WithStyles(ListItem)
      className="TodoListItem-completedTodoItem-2"
    >
      <ListItem
        ContainerComponent="li"
        button={false}
        className="TodoListItem-completedTodoItem-2"
        classes={
          Object {
            "button": "MuiListItem-button-11",
            "container": "MuiListItem-container-4",
            "default": "MuiListItem-default-6",
            "dense": "MuiListItem-dense-7",
            "disabled": "MuiListItem-disabled-8",
            "divider": "MuiListItem-divider-9",
            "focusVisible": "MuiListItem-focusVisible-5",
            "gutters": "MuiListItem-gutters-10",
            "root": "MuiListItem-root-3",
            "secondaryAction": "MuiListItem-secondaryAction-12",
            "selected": "MuiListItem-selected-13",
          }
        }
        dense={false}
        disableGutters={false}
        disabled={false}
        divider={false}
        selected={false}
      >
        <li
          className="MuiListItem-root-3 MuiListItem-default-6 MuiListItem-gutters-10 TodoListItem-completedTodoItem-2"
          disabled={false}
        >
          <WithStyles(Checkbox)
            checked={false}
            disableRipple={true}
            disabled={true}
            key=".0"
            onChange={[MockFunction]}
            tabIndex={-1}
          >
            <Checkbox
              checked={false}
              checkedIcon={<pure(CheckBox) />}
              classes={
                Object {
                  "checked": "MuiCheckbox-checked-15",
                  "colorPrimary": "MuiCheckbox-colorPrimary-18",
                  "colorSecondary": "MuiCheckbox-colorSecondary-19",
                  "disabled": "MuiCheckbox-disabled-16",
                  "indeterminate": "MuiCheckbox-indeterminate-17",
                  "root": "MuiCheckbox-root-14",
                }
              }
              color="secondary"
              disableRipple={true}
              disabled={true}
              icon={<pure(CheckBoxOutlineBlank) />}
              indeterminate={false}
              indeterminateIcon={<pure(IndeterminateCheckBox) />}
              onChange={[MockFunction]}
              tabIndex={-1}
            >
              <WithStyles(SwitchBase)
                checked={false}
                checkedIcon={<pure(CheckBox) />}
                className=""
                classes={
                  Object {
                    "checked": "MuiCheckbox-checked-15",
                    "disabled": "MuiCheckbox-disabled-16",
                    "root": "MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19",
                  }
                }
                disableRipple={true}
                disabled={true}
                icon={<pure(CheckBoxOutlineBlank) />}
                inputProps={
                  Object {
                    "data-indeterminate": false,
                  }
                }
                onChange={[MockFunction]}
                tabIndex={-1}
                type="checkbox"
              >
                <SwitchBase
                  checked={false}
                  checkedIcon={<pure(CheckBox) />}
                  className=""
                  classes={
                    Object {
                      "checked": "MuiPrivateSwitchBase-checked-21 MuiCheckbox-checked-15",
                      "disabled": "MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16",
                      "input": "MuiPrivateSwitchBase-input-23",
                      "root": "MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19",
                    }
                  }
                  disableRipple={true}
                  disabled={true}
                  icon={<pure(CheckBoxOutlineBlank) />}
                  inputProps={
                    Object {
                      "data-indeterminate": false,
                    }
                  }
                  onChange={[MockFunction]}
                  tabIndex={-1}
                  type="checkbox"
                >
                  <WithStyles(IconButton)
                    className="MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19 MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16"
                    component="span"
                    disableRipple={true}
                    disabled={true}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    tabIndex={null}
                  >
                    <IconButton
                      className="MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19 MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16"
                      classes={
                        Object {
                          "colorInherit": "MuiIconButton-colorInherit-25",
                          "colorPrimary": "MuiIconButton-colorPrimary-26",
                          "colorSecondary": "MuiIconButton-colorSecondary-27",
                          "disabled": "MuiIconButton-disabled-28",
                          "label": "MuiIconButton-label-29",
                          "root": "MuiIconButton-root-24",
                        }
                      }
                      color="default"
                      component="span"
                      disableRipple={true}
                      disabled={true}
                      onBlur={[Function]}
                      onFocus={[Function]}
                      tabIndex={null}
                    >
                      <WithStyles(ButtonBase)
                        centerRipple={true}
                        className="MuiIconButton-root-24 MuiIconButton-disabled-28 MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19 MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16"
                        component="span"
                        disableRipple={true}
                        disabled={true}
                        focusRipple={true}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        tabIndex={null}
                      >
                        <ButtonBase
                          centerRipple={true}
                          className="MuiIconButton-root-24 MuiIconButton-disabled-28 MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19 MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16"
                          classes={
                            Object {
                              "disabled": "MuiButtonBase-disabled-31",
                              "focusVisible": "MuiButtonBase-focusVisible-32",
                              "root": "MuiButtonBase-root-30",
                            }
                          }
                          component="span"
                          disableRipple={true}
                          disableTouchRipple={false}
                          disabled={true}
                          focusRipple={true}
                          onBlur={[Function]}
                          onFocus={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          <span
                            className="MuiButtonBase-root-30 MuiButtonBase-disabled-31 MuiIconButton-root-24 MuiIconButton-disabled-28 MuiPrivateSwitchBase-root-20 MuiCheckbox-root-14 MuiCheckbox-colorSecondary-19 MuiPrivateSwitchBase-disabled-22 MuiCheckbox-disabled-16"
                            onBlur={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="-1"
                          >
                            <span
                              className="MuiIconButton-label-29"
                            >
                              <pure(CheckBoxOutlineBlank)>
                                <CheckBoxOutlineBlank>
                                  <WithStyles(SvgIcon)>
                                    <SvgIcon
                                      classes={
                                        Object {
                                          "colorAction": "MuiSvgIcon-colorAction-36",
                                          "colorDisabled": "MuiSvgIcon-colorDisabled-38",
                                          "colorError": "MuiSvgIcon-colorError-37",
                                          "colorPrimary": "MuiSvgIcon-colorPrimary-34",
                                          "colorSecondary": "MuiSvgIcon-colorSecondary-35",
                                          "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-39",
                                          "fontSizeLarge": "MuiSvgIcon-fontSizeLarge-41",
                                          "fontSizeSmall": "MuiSvgIcon-fontSizeSmall-40",
                                          "root": "MuiSvgIcon-root-33",
                                        }
                                      }
                                      color="inherit"
                                      component="svg"
                                      fontSize="default"
                                      viewBox="0 0 24 24"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="MuiSvgIcon-root-33"
                                        focusable="false"
                                        role="presentation"
                                        viewBox="0 0 24 24"
                                      >
                                        <path
                                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                        />
                                      </svg>
                                    </SvgIcon>
                                  </WithStyles(SvgIcon)>
                                </CheckBoxOutlineBlank>
                              </pure(CheckBoxOutlineBlank)>
                              <input
                                checked={false}
                                className="MuiPrivateSwitchBase-input-23"
                                data-indeterminate={false}
                                disabled={true}
                                onChange={[Function]}
                                tabIndex={-1}
                                type="checkbox"
                              />
                            </span>
                          </span>
                        </ButtonBase>
                      </WithStyles(ButtonBase)>
                    </IconButton>
                  </WithStyles(IconButton)>
                </SwitchBase>
              </WithStyles(SwitchBase)>
            </Checkbox>
          </WithStyles(Checkbox)>
          <Link
            href={
              Object {
                "pathname": "/todo",
                "query": Object {
                  "id": "bc995789-f666-4f15-8fa4-739d3182a808",
                },
              }
            }
            key=".1"
            prefetch={true}
          >
            <a
              href="/todo?id=bc995789-f666-4f15-8fa4-739d3182a808"
              onClick={[Function]}
            >
              <WithStyles(ListItemText)
                secondary="Due: 02/01/2000"
              >
                <ListItemText
                  classes={
                    Object {
                      "dense": "MuiListItemText-dense-44",
                      "inset": "MuiListItemText-inset-43",
                      "primary": "MuiListItemText-primary-45",
                      "root": "MuiListItemText-root-42",
                      "secondary": "MuiListItemText-secondary-46",
                      "textDense": "MuiListItemText-textDense-47",
                    }
                  }
                  disableTypography={false}
                  inset={false}
                  secondary="Due: 02/01/2000"
                >
                  <div
                    className="MuiListItemText-root-42"
                  >
                    <WithStyles(Typography)
                      className="MuiListItemText-secondary-46"
                      color="textSecondary"
                    >
                      <Typography
                        align="inherit"
                        className="MuiListItemText-secondary-46"
                        classes={
                          Object {
                            "alignCenter": "MuiTypography-alignCenter-71",
                            "alignJustify": "MuiTypography-alignJustify-73",
                            "alignLeft": "MuiTypography-alignLeft-70",
                            "alignRight": "MuiTypography-alignRight-72",
                            "body1": "MuiTypography-body1-57",
                            "body2": "MuiTypography-body2-56",
                            "button": "MuiTypography-button-59",
                            "caption": "MuiTypography-caption-58",
                            "colorError": "MuiTypography-colorError-82",
                            "colorInherit": "MuiTypography-colorInherit-77",
                            "colorPrimary": "MuiTypography-colorPrimary-78",
                            "colorSecondary": "MuiTypography-colorSecondary-79",
                            "colorTextPrimary": "MuiTypography-colorTextPrimary-80",
                            "colorTextSecondary": "MuiTypography-colorTextSecondary-81",
                            "display1": "MuiTypography-display1-52",
                            "display2": "MuiTypography-display2-51",
                            "display3": "MuiTypography-display3-50",
                            "display4": "MuiTypography-display4-49",
                            "gutterBottom": "MuiTypography-gutterBottom-75",
                            "h1": "MuiTypography-h1-60",
                            "h2": "MuiTypography-h2-61",
                            "h3": "MuiTypography-h3-62",
                            "h4": "MuiTypography-h4-63",
                            "h5": "MuiTypography-h5-64",
                            "h6": "MuiTypography-h6-65",
                            "headline": "MuiTypography-headline-53",
                            "noWrap": "MuiTypography-noWrap-74",
                            "overline": "MuiTypography-overline-68",
                            "paragraph": "MuiTypography-paragraph-76",
                            "root": "MuiTypography-root-48",
                            "srOnly": "MuiTypography-srOnly-69",
                            "subheading": "MuiTypography-subheading-55",
                            "subtitle1": "MuiTypography-subtitle1-66",
                            "subtitle2": "MuiTypography-subtitle2-67",
                            "title": "MuiTypography-title-54",
                          }
                        }
                        color="textSecondary"
                        gutterBottom={false}
                        headlineMapping={
                          Object {
                            "body1": "p",
                            "body2": "p",
                            "display1": "h1",
                            "display2": "h1",
                            "display3": "h1",
                            "display4": "h1",
                            "h1": "h1",
                            "h2": "h2",
                            "h3": "h3",
                            "h4": "h4",
                            "h5": "h5",
                            "h6": "h6",
                            "headline": "h1",
                            "subheading": "h3",
                            "subtitle1": "h6",
                            "subtitle2": "h6",
                            "title": "h2",
                          }
                        }
                        noWrap={false}
                        paragraph={false}
                        theme={
                          Object {
                            "breakpoints": Object {
                              "between": [Function],
                              "down": [Function],
                              "keys": Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ],
                              "only": [Function],
                              "up": [Function],
                              "values": Object {
                                "lg": 1280,
                                "md": 960,
                                "sm": 600,
                                "xl": 1920,
                                "xs": 0,
                              },
                              "width": [Function],
                            },
                            "direction": "ltr",
                            "mixins": Object {
                              "gutters": [Function],
                              "toolbar": Object {
                                "@media (min-width:0px) and (orientation: landscape)": Object {
                                  "minHeight": 48,
                                },
                                "@media (min-width:600px)": Object {
                                  "minHeight": 64,
                                },
                                "minHeight": 56,
                              },
                            },
                            "overrides": Object {},
                            "palette": Object {
                              "action": Object {
                                "active": "rgba(0, 0, 0, 0.54)",
                                "disabled": "rgba(0, 0, 0, 0.26)",
                                "disabledBackground": "rgba(0, 0, 0, 0.12)",
                                "hover": "rgba(0, 0, 0, 0.08)",
                                "hoverOpacity": 0.08,
                                "selected": "rgba(0, 0, 0, 0.14)",
                              },
                              "augmentColor": [Function],
                              "background": Object {
                                "default": "#fafafa",
                                "paper": "#fff",
                              },
                              "common": Object {
                                "black": "#000",
                                "white": "#fff",
                              },
                              "contrastThreshold": 3,
                              "divider": "rgba(0, 0, 0, 0.12)",
                              "error": Object {
                                "contrastText": "#fff",
                                "dark": "#d32f2f",
                                "light": "#e57373",
                                "main": "#f44336",
                              },
                              "getContrastText": [Function],
                              "grey": Object {
                                "100": "#f5f5f5",
                                "200": "#eeeeee",
                                "300": "#e0e0e0",
                                "400": "#bdbdbd",
                                "50": "#fafafa",
                                "500": "#9e9e9e",
                                "600": "#757575",
                                "700": "#616161",
                                "800": "#424242",
                                "900": "#212121",
                                "A100": "#d5d5d5",
                                "A200": "#aaaaaa",
                                "A400": "#303030",
                                "A700": "#616161",
                              },
                              "primary": Object {
                                "contrastText": "#fff",
                                "dark": "#303f9f",
                                "light": "#7986cb",
                                "main": "#3f51b5",
                              },
                              "secondary": Object {
                                "contrastText": "#fff",
                                "dark": "#c51162",
                                "light": "#ff4081",
                                "main": "#f50057",
                              },
                              "text": Object {
                                "disabled": "rgba(0, 0, 0, 0.38)",
                                "hint": "rgba(0, 0, 0, 0.38)",
                                "primary": "rgba(0, 0, 0, 0.87)",
                                "secondary": "rgba(0, 0, 0, 0.54)",
                              },
                              "tonalOffset": 0.2,
                              "type": "light",
                            },
                            "props": Object {},
                            "shadows": Array [
                              "none",
                              "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
                              "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
                              "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
                              "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
                              "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
                              "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
                              "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
                              "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
                              "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
                              "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
                              "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
                              "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
                              "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
                              "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
                              "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
                              "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
                              "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
                              "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
                              "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
                              "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
                              "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
                              "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
                              "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
                              "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
                            ],
                            "shape": Object {
                              "borderRadius": 4,
                            },
                            "spacing": Object {
                              "unit": 8,
                            },
                            "transitions": Object {
                              "create": [Function],
                              "duration": Object {
                                "complex": 375,
                                "enteringScreen": 225,
                                "leavingScreen": 195,
                                "short": 250,
                                "shorter": 200,
                                "shortest": 150,
                                "standard": 300,
                              },
                              "easing": Object {
                                "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                                "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                                "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                                "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                              },
                              "getAutoHeightDuration": [Function],
                            },
                            "typography": Object {
                              "body1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 400,
                                "lineHeight": "1.46429em",
                              },
                              "body1Next": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00938em",
                                "lineHeight": 1.5,
                              },
                              "body2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "lineHeight": "1.71429em",
                              },
                              "body2Next": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.01071em",
                                "lineHeight": 1.5,
                              },
                              "button": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "textTransform": "uppercase",
                              },
                              "buttonNext": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.02857em",
                                "lineHeight": 1.5,
                                "textTransform": "uppercase",
                              },
                              "caption": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "lineHeight": "1.375em",
                              },
                              "captionNext": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.03333em",
                                "lineHeight": 1.66,
                              },
                              "display1": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.125rem",
                                "fontWeight": 400,
                                "lineHeight": "1.20588em",
                              },
                              "display2": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.8125rem",
                                "fontWeight": 400,
                                "lineHeight": "1.13333em",
                                "marginLeft": "-.02em",
                              },
                              "display3": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3.5rem",
                                "fontWeight": 400,
                                "letterSpacing": "-.02em",
                                "lineHeight": "1.30357em",
                                "marginLeft": "-.02em",
                              },
                              "display4": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "7rem",
                                "fontWeight": 300,
                                "letterSpacing": "-.04em",
                                "lineHeight": "1.14286em",
                                "marginLeft": "-.04em",
                              },
                              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                              "fontSize": 14,
                              "fontWeightLight": 300,
                              "fontWeightMedium": 500,
                              "fontWeightRegular": 400,
                              "h1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "6rem",
                                "fontWeight": 300,
                                "letterSpacing": "-0.01562em",
                                "lineHeight": 1,
                              },
                              "h2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3.75rem",
                                "fontWeight": 300,
                                "letterSpacing": "-0.00833em",
                                "lineHeight": 1,
                              },
                              "h3": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3rem",
                                "fontWeight": 400,
                                "letterSpacing": "0em",
                                "lineHeight": 1.04,
                              },
                              "h4": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.125rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00735em",
                                "lineHeight": 1.17,
                              },
                              "h5": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.5rem",
                                "fontWeight": 400,
                                "letterSpacing": "0em",
                                "lineHeight": 1.33,
                              },
                              "h6": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.25rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.0075em",
                                "lineHeight": 1.6,
                              },
                              "headline": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.5rem",
                                "fontWeight": 400,
                                "lineHeight": "1.35417em",
                              },
                              "overline": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.08333em",
                                "lineHeight": 2.66,
                                "textTransform": "uppercase",
                              },
                              "pxToRem": [Function],
                              "round": [Function],
                              "subheading": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "lineHeight": "1.5em",
                              },
                              "subtitle1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00938em",
                                "lineHeight": 1.75,
                              },
                              "subtitle2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.00714em",
                                "lineHeight": 1.57,
                              },
                              "title": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.3125rem",
                                "fontWeight": 500,
                                "lineHeight": "1.16667em",
                              },
                              "useNextVariants": false,
                            },
                            "zIndex": Object {
                              "appBar": 1100,
                              "drawer": 1200,
                              "mobileStepper": 1000,
                              "modal": 1300,
                              "snackbar": 1400,
                              "tooltip": 1500,
                            },
                          }
                        }
                      >
                        <p
                          className="MuiTypography-root-48 MuiTypography-body1-57 MuiTypography-colorTextSecondary-81 MuiListItemText-secondary-46"
                        >
                          Due: 02/01/2000
                        </p>
                      </Typography>
                    </WithStyles(Typography)>
                  </div>
                </ListItemText>
              </WithStyles(ListItemText)>
            </a>
          </Link>
        </li>
      </ListItem>
    </WithStyles(ListItem)>
  </TodoListItem>
</WithStyles(TodoListItem)>
`;
